# zmij

./: CMakeLists.txt  README.md  zmij-test.cc  zmij.c  zmij.cc  zmij.h
test/: CMakeLists.txt  benchmark.cc  benchmark.h  double-check.cc  double-check.h  float-check.cc  modular-search-test.cc  modular-search.h  pow10-test.cc  verify-double.cc  verify.cc  verify.py  zmij-benchmark.cc  zmij-test.cc
